testdata/fixtures/audit/positive/cookie_insecure_express_no_opts_js.js
function login(req, res) {
  const token = issueSessionToken(req.user);
  res.cookie("session", token);
  res.json({ ok: true });
}

module.exports = login;
